--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -8,15 +8,50 @@ h3 {
     font-family: 'Open Sans', sans-serif;
 }
 
-.text-block {
+
+/* panel */
+.panel-custom-light {
+    background-color: inherit;
+    border: none;
+    border-radius: 0px;
+    box-shadow: 0px 0px 15px #dacfa4;
+}
+
+/* custom alerts */
+.alert-custom {
+    margin-top: 10px;
+    padding: 15px;
+    margin-bottom: 20px;
+    border: 1px solid transparent;
+    border-radius: 0px;
     font-size: 18px;
+}
+.alert-custom-success {
+    color: #468847;
+    border-right: 4px solid #468847;
+    border-left: 4px solid #468847;
+    background: rgba(46, 88, 47, 0.1);
+    border-top: none;
+    border-bottom: none;
+}
+
+.text-block {
+    font-size: 20px;
     font-family: 'Open Sans', sans-serif;
+}
+
+.custom-hr {
+    border-top: 2px solid #dacfa4;
+    margin: 15px 0px;
 }
 
 /* colors */
 .primary-color {
     /*color: #B6B9CD;*/
     color: #F66733;
+}
+.purple-color {
+    color: #605E71;
 }
 .light-grey {
     color: #cccccc;
@@ -36,8 +71,15 @@ h3 {
     /*background-color: #d4d5d7;*/
     background-color: #D4C99E;
 }
+.lighter-background {
+    background-color: #dacfa4;
+}
 .dark-background {
     background-color: #302E41;
+    color: #B6B9CD;
+}
+.darkish-background {
+    background-color: #39374a;
     color: #B6B9CD;
 }
 
@@ -48,6 +90,92 @@ h3 {
 }
 .btn-custom:hover {
     background-color: #403E51;
+    color: #B6B9CD;
+}
+
+
+/* email form */
+.form-email input
+{
+    outline: none;
+    border: none;
+    -webkit-box-shadow: none !important;
+    -moz-box-shadow: none !important;
+    box-shadow: none !important;
+
+    padding: 10px;
+    margin-bottom: 0px;
+    height: 40px;
+    color: #B6B9CD;
+    line-height: 40px;
+    font-size: 16px;
+    background-color: #302E41;
+}
+.form-email textarea
+{
+    outline: none;
+    border: none;
+    -webkit-box-shadow: none !important;
+    -moz-box-shadow: none !important;
+    box-shadow: none !important;
+
+    padding: 10px;
+    margin-bottom: 0px;
+    color: #B6B9CD;
+    font-size: 16px;
+    background-color: #302E41;
+}
+.form-email-1 input[type="text"]
+{
+    outline: none;
+    border: none;
+    -webkit-box-shadow: none !important;
+    -moz-box-shadow: none !important;
+    box-shadow: none !important;
+
+    padding: 10px;
+    margin-bottom: 0px;
+    border-bottom: 2px dotted #B6B9CD;
+    border-radius: 0;
+    height: 30px;
+    color: #aaa;
+    line-height: 30px;
+    font-size: 16px;
+    background-color: #403E51;
+}
+.form-email-1 input[type="email"]
+{
+    outline: none;
+    border: none;
+    -webkit-box-shadow: none !important;
+    -moz-box-shadow: none !important;
+    box-shadow: none !important;
+
+    padding: 10px;
+    border-bottom: 2px dotted #B6B9CD;
+    border-radius: 0;
+    height: 30px;
+    color: #aaa;
+    line-height: 30px;
+    font-size: 16px;
+    background-color: #403E51;
+}
+.form-email-1 textarea
+{
+    outline: none;
+    border: 2px dotted #B6B9CD;
+    -webkit-box-shadow: none !important;
+    -moz-box-shadow: none !important;
+    box-shadow: none !important;
+
+    padding: 10px;
+    border-radius: 0;
+    color: #aaa;
+    font-size: 16px;
+    background-color: #403E51;
+}
+
+.form-control::-webkit-input-placeholder {
     color: #B6B9CD;
 }
 
